--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,12 @@
     <string name="confirm">Confirm</string>
     <string name="warning">Warning</string>
     <string name="cancel">Cancel</string>
+    <string name="full_date_short">yyyy dd MMM hh:mm a</string>
 
     <!-- MainLayout -->
     <string name="tasks">Tasks</string>
     <string name="time_format">"EE, dd MMM "</string>
+    <string name="top_bar_date">dd MMMM</string>
     <string name="more_options">more options</string>
 
     <!-- TaskLayout -->
@@ -22,14 +24,18 @@
     <string name="reminder">reminder</string>
     <string name="create_task">Create a task</string>
     <string name="edit_task">Edit the task</string>
+    <string name="task_history">Task History</string>
 
     <!-- Notification -->
     <string name="task_reminder">Task Reminder</string>
+    <string name="cancel_the_reminder">Cancel the reminder?</string>
     <string name="description">For remind to do the task</string>
     <string name="no_set_reminder_permission">Failed to set reminder due to no permission</string>
     <string name="note_brevent">Note: notification may not work if Brevent work on Checklist</string>
     <string name="note_thanox">Note: notification may not work if Thanox work on Checklist</string>
     <string name="no_do_nothing">Don\'t plan to do nothing!!</string>
     <string name="no_change_do_nothing">Don\'t change plan to do nothing!!</string>
+    <string name="remind_at_preview">remind at %1$s hour %2$s minutes later</string>
+    <string name="remind_at">remind at %1$s</string>
 
 </resources>
