Optimize select time dialog. Opt pick date landscape mode support; Added input time select button;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="pin">Pin</string>
     <string name="pinned_task">Pinned task</string>
     <string name="select_date">Select a date</string>
+    <string name="pick">Pick</string>
+    <string name="input">Input</string>
 
     <!-- Notification -->
     <string name="task_reminder">Task Reminder</string>
