--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="time_format">"EE, dd MMM "</string>
     <string name="top_bar_date">dd MMMM</string>
     <string name="more_options">more options</string>
+    <string name="scroll_to_end">Scroll\nto end</string>
 
     <!-- TaskLayout -->
     <string name="task_date_format">dd MMM yyyy</string>
