--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -17,6 +17,7 @@
     <string name="time_format">"EE, MMM dd 日"</string>
     <string name="top_bar_date">MMMM dd 日</string>
     <string name="more_options">更多选项</string>
+    <string name="scroll_to_end">滚动\n到最下方</string>
 
     <!-- TaskLayout -->
     <string name="task_date_format">yyyy 年 MMM dd 日</string>
