--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,9 @@
     <string name="select_date">Select a date</string>
     <string name="pick">Pick</string>
     <string name="input">Input</string>
+    <string name="just_reminded">The task just reminded</string>
+    <string name="task_reminded_time">Task has reminded \nat: %1$s</string>
+    <string name="cancel_highlight">Cancel highlight at here</string>
 
     <!-- Notification -->
     <string name="task_reminder">Task Reminder</string>
