--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -37,6 +37,9 @@
     <string name="select_date">選擇日期</string>
     <string name="pick">選擇</string>
     <string name="input">輸入</string>
+    <string name="just_reminded">任務剛剛提醒</string>
+    <string name="task_reminded_time">任務已提醒於: %1$s</string>
+    <string name="cancel_highlight">取消突出顯示</string>
 
     <!-- Notification -->
     <string name="task_reminder">提醒</string>
