--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -41,6 +41,7 @@
     <string name="just_reminded">刚刚提醒的任务</string>
     <string name="task_reminded_time">任务已提醒于: %1$s</string>
     <string name="cancel_highlight">取消此突出显示</string>
+    <string name="search">搜索</string>
 
     <!-- Notification -->
     <string name="task_reminder">任务提醒</string>
