--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -41,6 +41,7 @@
     <string name="just_reminded">任務剛剛提醒</string>
     <string name="task_reminded_time">任務已提醒於: %1$s</string>
     <string name="cancel_highlight">取消突出顯示</string>
+    <string name="search">搜索</string>
 
     <!-- Notification -->
     <string name="task_reminder">提醒</string>
