Push beta apk [Fixed card UI may be obscured in landscape mode] [Added some text to language file] [Fixed Backup & Restore layout UI may be obscured in landscape mode] [Fixed a crash when rotate screen in auto scroll] [Push 0.2.0-Build_beta01]

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -47,7 +47,7 @@
     <string name="task_reminder">任务提醒</string>
     <string name="cancel_the_reminder">取消提醒?</string>
     <string name="description">用于提醒</string>
-    <string name="no_set_reminder_permission">由于没有权限，无法设置提醒</string>
+    <string name="no_set_reminder_permission">由于没有权限，无法设置提醒。</string>
     <string name="note_brevent">注意：如果 Brevent 在该程式上工作，通知可能无法使用</string>
     <string name="note_thanox">注意：如果 Thanox 在该程式上工作，通知可能无法使用</string>
     <string name="no_do_nothing">请不要计划做空气!!</string>
@@ -57,6 +57,10 @@
     <string name="nothing_need_do">选择无需做任何事! \n点击 \'添加\' 以创建任务</string>
     <string name="setting_remind_warning">不建议设置时间太久的提醒, 而且你不应该将你的计划推迟那么久。 此外，这也可能会导致意外的错误。\n\n点击确认以继续设置.</string>
     <string name="cannot_set_past">为过去设置提醒是做不到的! lol</string>
+    <string name="please_grant_permission">请授予权限!</string>
+    <string name="request_SCHEDULE_EXACT_ALARM_content">为了准时显示通知（提醒），请授予 闹钟和提醒 权限。\n如果没有此权限设置通知（提醒），则可能不会准时提醒。</string>
+    <string name="unable_sent_cause_no_permission">由于没有权限，无法发送通知!</string>
+    <string name="no_SCHEDULE_EXACT_ALARM_permission_explain"><![CDATA[由于没有 闹钟和提醒 权限，提醒可能会延迟送达]]></string>
 
     <!-- Backup & Restore -->
     <string name="backup_restore"><![CDATA[备份 & 恢复]]></string>
@@ -69,10 +73,10 @@
     <string name="select_backup_method">选择一个备份方式</string>
     <string name="select_backup_file_restore">选择要恢复的备份文件</string>
     <string name="click_select_file_import">单击以选择要导入的文件</string>
-    <string name="selected">已选择!</string>
-    <string name="back_disabled_notice">返回操作已禁用! 请等待程序处理完成...</string>
+    <string name="selected_file">已选择!</string>
+    <string name="back_disabled_notice">返回操作已禁用! 请等待程序处理完成…</string>
     <string name="select_file_to_import">请选择要导入的文件!</string>
-    <string name="error_try_undo_import">错误! 尝试撤消导入...</string>
+    <string name="error_try_undo_import">错误! 尝试撤消导入…</string>
     <string name="finished">完成!</string>
 
 </resources>
