--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="request_SCHEDULE_EXACT_ALARM_content">To display notifications (reminders) on time please grant \"Alarm &amp; reminders\" permission.\nIf set notification (reminders) without this permission, it may arrived late.</string>
     <string name="unable_sent_cause_no_permission">Notification is unable to send due to no permission!</string>
     <string name="no_SCHEDULE_EXACT_ALARM_permission_explain"><![CDATA[The reminder may arrive late due to no alarms & reminders permission]]></string>
+    <string name="permission_lost_toast"><![CDATA[Notification or Alarm Permission lost! Reminder is unable to send!]]></string>
 
     <!-- Backup & Restore -->
     <string name="backup_restore"><![CDATA[Backup & Restore]]></string>
