--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">检查清单</string>
     <string name="edit">编辑</string>
     <string name="add">添加</string>
+    <string name="next">下一步</string>
     <string name="back">返回</string>
     <string name="dismiss">禁用</string>
     <string name="confirm">确认</string>
@@ -43,6 +44,8 @@
     <string name="cancel_highlight">取消此突出显示</string>
     <string name="search">搜索</string>
     <string name="create_as_pin">创建为固定的任务</string>
+    <string name="create_with_reminder">创建任务后添加提醒</string>
+    <string name="task_is_created">任务已创建，点击禁用不会影响刚创建的任务</string>
 
     <!-- Notification -->
     <string name="task_reminder">任务提醒</string>
