Added Task Detail feature [Fixed list update high frequency] [Added Task Detail feature] [Update Room Database to 2.7.0-alpha12 for fix export and import issue] [Optimize UI for unfolded folding phone screen] [Update dependencies]

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -11,6 +11,8 @@
     <string name="warning">注意</string>
     <string name="cancel">取消</string>
     <string name="delete">删除</string>
+    <string name="text">文本</string>
+    <string name="url">网址</string>
     <string name="full_date_short">yyyy 年 MMM dd 日 hh:mm a</string>
 
     <!-- MainLayout -->
@@ -46,6 +48,11 @@
     <string name="create_as_pin">创建为固定的任务</string>
     <string name="create_with_reminder">创建任务后添加提醒</string>
     <string name="task_is_created">任务已创建，点击禁用不会影响刚创建的任务</string>
+    <string name="detail">详情信息</string>
+    <string name="add_detail">添加详情信息</string>
+    <string name="create_task_detail">创建任务详情</string>
+    <string name="click_select_detail_type">单击选择详细信息类型</string>
+    <string name="invalid_url">网址无效!</string>
 
     <!-- Notification -->
     <string name="task_reminder">任务提醒</string>
