--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -53,6 +53,12 @@
     <string name="create_task_detail">創建任務詳情</string>
     <string name="click_select_detail_type">按下選擇詳細內容類型</string>
     <string name="invalid_url">網址無效!</string>
+    <string name="select_detail_type">請先選擇詳細內容類型!</string>
+    <string name="package_not_found">未找到應用程式!\n應用程式包名: %1$s</string>
+    <string name="app_icon">應用程式圖標</string>
+    <string name="loading">載入中…</string>
+    <string name="application">應用</string>
+    <string name="failed_found_package">找不到儲存的應用程式包名!</string>
 
     <!-- Notification -->
     <string name="task_reminder">提醒</string>
