--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_display_language">TW</string>
     <string name="app_name">Checklist</string>
-    <string name="edit">提醒</string>
+    <string name="edit">編輯</string>
     <string name="add">添加</string>
     <string name="next">下一步</string>
     <string name="back">返回</string>
@@ -11,6 +11,7 @@
     <string name="warning">注意</string>
     <string name="cancel">取消</string>
     <string name="delete">刪除</string>
+    <string name="disable">禁用</string>
     <string name="text">文本</string>
     <string name="url">網址</string>
     <string name="full_date_short">yyyy 年 MMM dd 日 hh:mm a</string>
@@ -96,5 +97,20 @@
     <string name="select_file_to_import">請選擇要匯入的文件!</string>
     <string name="error_try_undo_import">錯誤! 嘗試撤銷導入…</string>
     <string name="finished">完成!</string>
+
+    <!-- Settings -->
+    <string name="settings">設定</string>
+    <string name="general_settings">常規設定</string>
+    <string name="about">關於</string>
+    <string name="notification">通知</string>
+    <string name="disable_remove_notify_in_reminded">停用點擊取消突出顯示時刪除顯示的通知</string>
+    <string name="unlimited">無限</string>
+    <string name="allowed_number_of_history">允許的任務歷史記錄數:</string>
+    <string name="disable_no_schedule_exact_alarm_notice"><![CDATA[停用鬧鐘和提醒權限未找到通知]]></string>
+    <string name="language">語言</string>
+    <string name="unsupported_below_api_33">不支援 Android TIRAMISU (API 33) 以下版本</string>
+    <string name="unsupported_api_must_higher_than_32">不支援：Android API 必須高於 32</string>
+    <string name="click_select_language">點選選擇語言</string>
+    <string name="developed_by">"開發者: "</string>
 
 </resources>
