--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -60,6 +60,10 @@
     <string name="loading">加载中…</string>
     <string name="application">应用</string>
     <string name="failed_found_package">找不到保存的应用包名!</string>
+    <string name="picture">图片</string>
+    <string name="click_select_picture">单击选择图片</string>
+    <string name="selected_picture">选定的图片</string>
+    <string name="open_with">打开方式</string>
 
     <!-- Notification -->
     <string name="task_reminder">任务提醒</string>
