--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -60,6 +60,10 @@
     <string name="loading">載入中…</string>
     <string name="application">應用</string>
     <string name="failed_found_package">找不到儲存的應用程式包名!</string>
+    <string name="picture">圖片</string>
+    <string name="click_select_picture">點選選擇圖片</string>
+    <string name="selected_picture">選定的圖片</string>
+    <string name="open_with">打開方式</string>
 
     <!-- Notification -->
     <string name="task_reminder">提醒</string>
