--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -64,6 +64,7 @@
     <string name="click_select_picture">點選選擇圖片</string>
     <string name="selected_picture">選定的圖片</string>
     <string name="open_with">打開方式</string>
+    <string name="picture_size_limit">圖片大小不能超過25MB!</string>
 
     <!-- Notification -->
     <string name="task_reminder">提醒</string>
