--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -23,6 +23,8 @@
     <string name="more_options">更多选项</string>
     <string name="scroll_to_end">滚动\n到最下方</string>
     <string name="scroll_to_top">滚动\n到顶端</string>
+    <string name="failed_large_file_size">失败！文件大小不能大于 25MB</string>
+    <string name="report_normal_file_size">如果文件大小不大于 25MB，请向开发人员报告</string>
 
     <!-- TaskLayout -->
     <string name="task_date_format">yyyy 年 MMM dd 日</string>
